# oh-platform-rs

./: .env.example  .rustfmt.toml  Cargo.toml  README.md
migrations/2022-06-02-082030_create_jobboard_company_vacancy_application/: down.sql  up.sql
src/: catchers.rs  database.rs  error.rs  lib.rs  main.rs  response.rs  schema.rs
src/routes/: application.rs  company.rs  jobboard.rs  mod.rs  vacancy.rs
