[package]
name = "oh-platform"
version = "0.1.0"
edition = "2021"
authors = ["Alexis Le Provost <alexis.leprovost@outlook.com>"]

[dependencies]
rocket = { version = "=0.5.0-rc.1", default-features = false, features = ["json"] }
rocket_http = "=0.5.0-rc.1"
rocket_sync_db_pools = { version = "=0.1.0-rc.1", features = ["diesel_postgres_pool"]}
rocket_okapi = { version = "=0.8.0-rc.1", features = ["swagger"] }
schemars = { version = "^0.8.10", features = ["derive", "chrono"] }
diesel = { version = "=1.4.8", features = ["postgres", "r2d2", "chrono"] }
chrono = { version = "^0.4.19", features = ["serde"] }
serde = { version = "^1.0.137", features = ["derive"] }
thiserror = "^1.0.31"
eyre = "^0.6.8"
color-eyre = "^0.6.1"
